map attribute visibility fix

--- a/client/src/scenes/Plans.css
+++ b/client/src/scenes/Plans.css
@@ -40,3 +40,7 @@ html body {
 .card-content {
   height: 40%;
 }
+
+.leaflet-top, .leaflet-bottom {
+    z-index: 1;
+}
